--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@typegoose/typegoose": "^9.12.1",
+    "autocannon": "^7.10.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "clinic": "^12.0.0",
     "mongoose": "^6.6.0",
     "nestjs-typegoose": "^7.1.38",
     "reflect-metadata": "^0.1.13",
