--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGO_LOGIN=admin
 MONGO_PASSWORD=admin
-MONGO_HOST=192.168.0.5
+MONGO_HOST=192.168.0.2
 MONGO_PORT=27017
 MONGO_AUTH_DB=admin
+JWT_SECRET=test
