--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@typegoose/typegoose": "^9.12.1",
     "autocannon": "^7.10.0",
