--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@typegoose/typegoose": "^9.12.1",
     "autocannon": "^7.10.0",
@@ -34,6 +35,8 @@
     "clinic": "^12.0.0",
     "mongoose": "^6.6.0",
     "nestjs-typegoose": "^7.1.38",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -48,6 +51,7 @@
     "@types/jest": "28.1.8",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.7",
     "@types/supertest": "^2.0.11",
     "jest": "28.1.3",
     "prettier": "^2.3.2",
